[package]
name = "oq"
version = "0.1.0"
edition = "2021"
description = "Object Query - jq for JSON, YAML, TOML, and TOON"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Mootikins/oq"
keywords = ["json", "yaml", "toml", "jq", "query"]
categories = ["command-line-utilities", "encoding", "parser-implementations"]

[lib]
name = "oq"
path = "src/lib.rs"

[[bin]]
name = "oq"
path = "src/main.rs"

[dependencies]
# jq implementation in Rust
jaq-core = "3.0.0-beta"
jaq-std = "3.0.0-beta"
jaq-json = { version = "2.0.0-alpha", features = ["serde_json"] }

# Multi-format support
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
toon-format = "0.4"

# CLI
clap = { version = "4", features = ["derive"] }
thiserror = "2"

# Optional color output
yansi = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
